Add. html 이미지 표에 삽입하기

--- a/HTML/2-16.html
+++ b/HTML/2-16.html
@@ -19,7 +19,7 @@
                 <tr><td>황기태</td><td>80</td><td>F</td></tr>
                 <tr><td>이재문</td><td>95</td><td>F</td></tr>
                 <tr><td>이병은</td><td>40</td><td>F</td></tr>
-                <tr><td>안수범</td><td>100</td><td>A</td></tr>
+                <tr><td>안수범</td><td>100</td><td>A<sup>+</sup></td></tr>
             </tbody>
         </table>
     </body>
