--- a/HTML/2-17.html
+++ b/HTML/2-17.html
@@ -7,7 +7,7 @@
     <body>
         <h3>표에 이미지 삽입</h3>
         <hr>
-        <table>
+        <table border="20">
             <caption>좋아하는 과일</caption>
             <tbody>
                 <tr>
