--- a/HTML/2-18.html
+++ b/HTML/2-18.html
@@ -11,19 +11,19 @@
             <li><a href="https://www.daum.net/">다음</a></li>
         </ul>
         신문 사이트
-            <ul>
+            <ul> <!--언오더 리스트 -->
                 <li>
-                    <a href="https://www.etnews.com">
-                        <img src="media/iconetnews.png" alt="전자신문">
+                    <a href="https://www.etnews.com"> 
+                        <img src="media/iconetnews.png" alt="전자신문"><!--알터네이트 사진이 있으면 링크로 사진 출력 없으묜 "전자신문" 추가-->
                     </a>                
                 </li>
                 <li>
-                    <a href="https://www.chosun.com">
+                    <a href="https://www.chosun.com"> 
                         <img src="media/iconchosun.png" alt="조선일보">
                     </a>
                 </li>
             </ul>
             <hr>
-            <a href="ex2-17.html">예제 2-17로 이동</a>
+            <a href="ex2-17.html">예제 2-17로 이동</a><!--현재 사이트에서 다른 사이트로 이동하는 링크-->
     </body>
 </html>
