--- a/HTML/Garden.html
+++ b/HTML/Garden.html
@@ -8,6 +8,6 @@
 <body>
     <h3>비디오 삽입</h3>
     <hr>
-    <video src="web.mp4"  width="400" height="300" controls></video>
+    <video src="/Users/solseon/Desktop/모바일 프로그래밍 영상.mp4"  width="400" height="300" controls></video>
 </body>
 </html>
