--- a/HTML/2-13.html
+++ b/HTML/2-13.html
@@ -1,3 +1,4 @@
+<!--<ul>로 좋아하는 음식 나열-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -8,9 +9,9 @@
         <h3>내가 좋아하는 음식</h3>
         <hr>
         <ul>
-            <li>김치볶음밥</li>
-            <li>제육볶음</li>
-            <li>간장계란밥</li>
+            <li>감자탕</li>
+            <li>스파게티</li>
+            <li>올레국수</li>
         </ul>
     </body>
 </html>
