--- a/HTML/2-14.html
+++ b/HTML/2-14.html
@@ -1,3 +1,4 @@
+<!--중첩 리스트 만들기 !!중요함!!-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,21 +10,20 @@
         <hr>
         <ul>
             <li>내가 좋아하는 음식 많아요</li>
-                <ul>
-                    <li>김치볶음밥</li>
-                    <li>제육볶음</li>
-                    <li>간장계란밥</li>
-        </ul>
+            <ul>
+                <li>감자탕</li>
+                <li>스파게티</li>
+                <li>올레국수</li>
+            </ul>
             <li>라면 먹기 좋아해요</li>
-                <ol type="1">
-                    <li>계곡 여행을 간다.</li>
-                    <li>지칠때까지 신나게 물놀이 후 친구들과 라면을 끓인다.</li>
-                    <li>장수건을 덮고 라면을 끓이며 친구들과 떠든다.</li>
-                    <li>라면을 다 끓이면 종이컵에 담아 먹는다.</li>
-                    <li>라면을 다 먹은 후 햇살을 광합성하며 한숨 잔다.</li>
-                </ol>
-            <li>여름에는 바다로
-            <li>가을에는 산으로
-    </ul>
+            <ol type="A">
+                <li>물을 끓인다.</li>
+                <li>라면과 스프를 넣는다.</li>
+                <li>파를 썰어 넣는다.</li>
+                <li>한 입에 다 먹는다.</li>
+            </ol>
+            <li>여름에는 바다로</li>
+            <li>가을에는 산으로</li>
+        </ul>
     </body>
 </html>
