--- a/HTML/2-12.html
+++ b/HTML/2-12.html
@@ -1,18 +1,18 @@
+<!--<ol>로 라면 끓이는 순서 나열-->
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>맛있는 라면을 끓이는 순서</title>
+        <title>라면을 끓이는 순서</title>
     </head>
     <body>
-        <h3>맛있는 라면을 끓이는 순서</h3>
+        <h3>라면을 끓이는 순서</h3>
         <hr>
-        <ol type="A">
-            <li>계곡 여행을 간다.</li>
-            <li>지칠때까지 신나게 물놀이 후 친구들과 라면을 끓인다.</li>
-            <li>장수건을 덮고 라면을 끓이며 친구들과 떠든다.</li>
-            <li>라면을 다 끓이면 종이컵에 담아 먹는다.</li>
-            <li>라면을 다 먹은 후 햇살을 광합성하며 한숨 잔다.</li>
+        <ol type="A" >
+            <li>물을 끓인다.</li>
+            <li>라면과 스프를 넣는다.</li>
+            <li>파를 썰어 넣는다.</li>
+            <li>5분 후 먹는다.</li>
         </ol>
     </body>
 </html>
