--- a/HTML/2-5.html
+++ b/HTML/2-5.html
@@ -1,13 +1,15 @@
+<!--<hr>태그로 수평선 긋기-->
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>수평선 긋기</title></head>
-<body>
-<h3>수평선 긋기</h3>
-<hr>
-<p>hr 태그는 horizontal에서 딴 글자입니다.</p>
-<hr>
-<P>종료 태그 &lt/hr&gt를 사용하지 않습니다.</P> 
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>수평선 긋기</title>
+    </head>
+    <body>
+        <h3>수평선 긋기</h3>
+        <hr>
+        <p>hr 태그는 horizontal에서 딴 글자입니다.</p>
+        <hr>
+        <p>종료 태그는 &lt;/hr&gt;를 사용하지 않습니다.</p> <!--&lt; == 좌괄호<, &gt; == 우괄호>  -->
+    </body>
 </html>
