--- a/HTML/2-6.html
+++ b/HTML/2-6.html
@@ -1,14 +1,15 @@
+<!--<br> 태그로 새로운 줄로 넘어가기 -->
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>새로운 줄 넘어가기</title>
-</head>
-<body>
-<h3>새로운 줄 넘어가기</h3>
-<hr>
-&lt;br&gt; 태그로 다음 줄로 넘어갑니다.<br>
-2개의 &lt;br&gt; 태그로 두 번 넘어 갑니다.<br><br>
-잘 보이나요?
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>새로운 줄 넘어가기</title>
+    </head>
+    <body>
+        <h3>새로운 줄 넘어가기</h3>
+        <hr>
+        &lt;br&gt; 태그로 다음 줄로 넘어갑니다.<br>
+        2개의 &lt;br&gt;태그로 두 번 넘어 갑니다.<br><br>
+        잘 보이나요?
+    </body>
 </html>
