--- a/HTML/1-14.html
+++ b/HTML/1-14.html
@@ -13,7 +13,7 @@
             </style>
             <script>
                 function show() {   // <img>에 이미지 달기
-                    document.getElementById("fig").src="ElvisPresley.png";
+                    document.getElementById("fig").src="/Users/solseon/Desktop/채린수범.jpg";
                 }
                 function hide() {   // <img>에 이미지 제거
                     document.getElementById("fig").src="";
