--- a/HTML/2-11.html
+++ b/HTML/2-11.html
@@ -8,8 +8,8 @@
     <body>
         <h3>&lt;img&gt;태그로 이미지 삽입</h3>
         <hr>
-        <p>엘비스 프레슬리의 사진입니다.</p>
-        <img src="media/Elvis.jpg" width="150"
+        <p> 채린수범커플의 사진입니다.</p>
+        <img src="/Users/solseon/Desktop/채린수범.jpg" width="150"
             height="200" alt="Elvis">
         <img src="media/kitae.jpg" width="80"
             height="100" alt="황기태사진없음">
