--- a/HTML.exam/broadcast/index.html
+++ b/HTML.exam/broadcast/index.html
@@ -40,8 +40,8 @@
 						<header>
 							<h1>Track</h1>
 							<p style="font-size: 21px; font-family: Gowun Batang;">
-								탈출의 단서를 향해 한 걸음씩 나아가십시오.<br>
-								지금 ‘Track’에서 진정한 서스펜스를 경험해보세요.</p>
+								추적자는 이미 당신을 보고 있다.<br>
+								당신의 판단이 생존을 결정한다.</p>
 						</header>
 						<a href="#main" class="button big alt scrolly">지금 시작하기</a>
 					</div>
@@ -89,88 +89,52 @@
 							</div>
 					</div>
 				</section>
-
+<!--탈출의 단서를 향해 한 걸음씩 나아가십시오.
+지금 ‘Track’에서 진정한 서스펜스를 경험해보세요.-->
 			<!-- Two -->
 				<section class="wrapper style2">
 					<div class="inner">
 						<header>
-							<h2>Etiam veroeros lorem</h2>
+							<h3>단서, 판단, 탈출. 지금 ‘Track’의 모든 과정을 직접 눈으로 확인하세요.</h3>
 							<p>Fusce fringilla enim sit amet lectus sollicitudin, eu tincidunt odio semper.</p>
 						</header>
 						<!-- Tabbed Video Section -->
 							<div class="flex flex-tabs">
 								<ul class="tab-list">
-									<li><a href="#" data-tab="tab-1" class="active">Duis vestibulum tellus</a></li>
-									<li><a href="#" data-tab="tab-2">Quam tempus sodales ipsum</a></li>
-									<li><a href="#" data-tab="tab-3">Donec faucibus risus cursus</a></li>
+									<li><a href="#" data-tab="tab-1" class="active">Trailer</a></li>
+									<li><a href="#" data-tab="tab-2">Play video</a></li>
+									<li><a href="#" data-tab="tab-3">Illustration</a></li>
 								</ul>
 								<div class="tabs">
 
-									<!-- Tab 1 -->
-										<div class="tab tab-1 flex flex-3 active">
-											<!-- Video Thumbnail -->
+									<!-- Tab 1: 트레일러-->
+										<div class="tab tab-1 flex flex-3">
+											<!-- 트레일러 1 -->
 												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic01.jpg" alt="">
+													<div class="image fit">										
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
 													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
+													<iframe width="700" height="400" src="https://www.youtube.com/embed/MlKR0zz8l1Q?si=XPwEIACC2QeMLflJ" 
+													title="YouTube video player" frameborder="0"
+													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+													referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 												</div>
-											<!-- Video Thumbnail -->
+											<!-- 트레일러 2 -->
 												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic02.jpg" alt="">
+													<div class="image fit">														
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
 													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic03.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic04.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic05.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic06.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-										</div>
-
-									<!-- Tab 2 -->
+													<iframe width="700" height="400" src="https://www.youtube.com/embed/Gg0o2ueU53w?si=_mX-H4gEC5PtaFeq" 
+													title="YouTube video player" frameborder="0"
+													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+													referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+												</div>		
+										</div>								
+									<!-- Tab 2: 플레이영상 -->
 										<div class="tab tab-2 flex flex-3">
 											<!-- Video Thumbnail -->
 												<div class="video col">
@@ -234,7 +198,7 @@
 												</div>
 										</div>
 
-									<!-- Tab 3 -->
+									<!-- Tab 3: 일러스트 -->
 										<div class="tab tab-3 flex flex-3">
 											<!-- Video Thumbnail -->
 												<div class="video col">
