Update.team subeom

--- a/HTML.exam/broadcast/elements.html
+++ b/HTML.exam/broadcast/elements.html
@@ -1,11 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Broadcast by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html>
+<html>
 <head>
-    <title>Elements - Broadcast by TEMPLATED</title>
+    <title>Subeom</title>
     <meta charset="utf-8">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,26 +11,21 @@
 
 <!-- Header -->
 <header id="header">
-    <h1><a href="#">Broadcast <span>by TEMPLATED</span></a></h1>
+    <h1><a href="#">Track <span>by subeom</span></a></h1>
     <a href="#menu">Menu</a>
 </header>
 
 <!-- Nav -->
 <nav id="menu">
     <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="generic.html">Generic</a></li>
-        <li><a href="elements.html">Elements</a></li>
+        <li><a href="index.html">Track</a></li>
+        <li><a href="elements.html">Team subeom</a></li>
+        <li><a href="generic.html">video</a></li>
     </ul>
 </nav>
 
 <!-- Banner -->
-<!--
-    To use a video as your background, set data-video to the name of your video without
-    its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-    formats to work correctly.
--->
-<section id="banner" data-video="images/banner">
+<section id="subeom">
     <div class="inner">
         <header>
             <h1>This is Broadcast</h1>
@@ -526,10 +517,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
     </div>
     <div class="copyright">
         <ul class="icons">
-            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-            <li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+            <li><a href="https://www.instagram.com/_solseon/profilecard/?igsh=bTJ5YWJ3YjVuaHY4" class="icon fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
         </ul>
     </div>
 </footer>
