--- a/HTML.exam/broadcast/index.html
+++ b/HTML.exam/broadcast/index.html
@@ -23,9 +23,9 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="index.html">Track</a></li>
+       				<li><a href="elements.html">Team subeom</a></li>
+					<li><a href="generic.html">video</a></li>
 				</ul>
 			</nav>
 
@@ -43,14 +43,14 @@
 								추적자는 이미 당신을 보고 있다.<br>
 								당신의 판단이 생존을 결정한다.</p>
 						</header>
-						<a href="#main" class="button big alt scrolly">지금 시작하기</a>
+						<a href="#main" class="button big alt scrolly">지금 시작하기</a>				
 					</div>
 				</section>
 
 		<!-- Main -->
 			<div id="main">
 
-			<!-- One -->
+			<!-- 관찰력, 판단력 테스트 -->
 				<section class="wrapper style1">
 					<div class="inner">
 						<header class="align-center">
@@ -59,9 +59,9 @@
 								앞으로 펼쳐질 게임에 들어가기 전,당신의 <br>
 								관찰력과 판단력이 어느 정도인지 먼저 시험해보겠습니다. <br>
 								준비되셨나요?</p>
-						</header>
-						<!-- 2 Column Video Section -->
+						</header>			
 							<div class="flex flex-2">
+								<!-- 테스트 1 -->
 								<div class="video col">
 									<div class="image fit">
 										<img src="images/pic07.jpg" alt="">
@@ -74,6 +74,7 @@
 									</p>
 									<a href="https://www.youtube.com/watch?v=LuIPmk0Opc0" target="_blank" rel="noopener noreferrer" class="link"><span>Click Me</span></a><!--새로운 탭에서 링크를 열 수 있도록 target속성을 blank로 지정해준다. 또한 보안을 위하여 rel="noopener noreferrer" 를 추가해준다.-->
 								</div>
+								<!-- 테스트 2 -->
 								<div class="video col">
 									<div class="image fit">
 										<img src="images/pic08.jpg" alt="">
@@ -91,7 +92,7 @@
 				</section>
 <!--탈출의 단서를 향해 한 걸음씩 나아가십시오.
 지금 ‘Track’에서 진정한 서스펜스를 경험해보세요.-->
-			<!-- Two -->
+			<!-- 트레일러와 게임플레이영상 소개 -->
 				<section class="wrapper style2">
 					<div class="inner">
 						<header>
@@ -101,219 +102,68 @@
 						<!-- Tabbed Video Section -->
 							<div class="flex flex-tabs">
 								<ul class="tab-list">
-									<li><a href="#" data-tab="tab-1" class="active">Trailer</a></li>
-									<li><a href="#" data-tab="tab-2">Play video</a></li>
-									<li><a href="#" data-tab="tab-3">Illustration</a></li>
+									<li><a data-tab="tab-1" class="active">Trailer</a></li>
+									<li><a data-tab="tab-2">Play video</a></li>
 								</ul>
 								<div class="tabs">
-
 									<!-- Tab 1: 트레일러-->
-										<div class="tab tab-1 flex flex-3">
+										<div class="tab tab-1 flex flex-3 active">
 											<!-- 트레일러 1 -->
 												<div class="video col">
-													<div class="image fit">										
+													 <!-- <div class="image fit">									 -->
 														<div class="arrow">
-															<div class="icon fa-play"></div>
+														 <!-- <div class="icon fa-play"></div>  -->
 														</div>
 													</div>
 													<iframe width="700" height="400" src="https://www.youtube.com/embed/MlKR0zz8l1Q?si=XPwEIACC2QeMLflJ" 
 													title="YouTube video player" frameborder="0"
 													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 													referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-												</div>
+												<br>
+												<br>
 											<!-- 트레일러 2 -->
 												<div class="video col">
-													<div class="image fit">														
+													<!-- <div class="image fit"> -->
 														<div class="arrow">
-															<div class="icon fa-play"></div>
+															<!-- <div class="icon fa-play"></div> -->
 														</div>
 													</div>
 													<iframe width="700" height="400" src="https://www.youtube.com/embed/Gg0o2ueU53w?si=_mX-H4gEC5PtaFeq" 
 													title="YouTube video player" frameborder="0"
 													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-													referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-												</div>		
-										</div>								
+													referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>		
+										</div>																	
 									<!-- Tab 2: 플레이영상 -->
-										<div class="tab tab-2 flex flex-3">
-											<!-- Video Thumbnail -->
+										<div class="tab tab-2 flex flex-3">											
 												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic06.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
+														<div class="arrow">														
 														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
 												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic05.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic04.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic03.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic02.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic01.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-										</div>
-
-									<!-- Tab 3: 일러스트 -->
-										<div class="tab tab-3 flex flex-3">
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic03.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic02.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic01.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic06.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic05.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-											<!-- Video Thumbnail -->
-												<div class="video col">
-													<div class="image fit">
-														<img src="images/pic04.jpg" alt="">
-														<div class="arrow">
-															<div class="icon fa-play"></div>
-														</div>
-													</div>
-													<a href="generic.html" class="link"><span>Click Me</span></a>
-												</div>
-										</div>
-
+													<iframe width="700" height="400" src="https://www.youtube.com/embed/PnnNVQGVdts?si=M0XqVm7cYGg0UrQ6&amp;start=20" 
+													title="YouTube video player" frameborder="0" 
+													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+													referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+										</div>											
+									</div>
 								</div>
 							</div>
+						</div>
 					</div>
 				</section>
 
-			<!-- Three -->
-				<section class="wrapper ">
+			<!-- 게임 다운로드 -->
+			 <!-- <section id="banner" data-video="images/banner"></section> -->
+				<section class="wrapper">
 					<div class="inner">
 						<header class="align-center">
-							<h2>Aliquam ipsum purus dolor</h2>
-							<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
-						</header>
-
-						<!-- 3 Column Video Section -->
-							<div class="flex flex-3">
-								<div class="video col">
-									<div class="image fit">
-										<img src="images/pic09.jpg" alt="">
-										<div class="arrow">
-											<div class="icon fa-play"></div>
-										</div>
-									</div>
-									<p class="caption">
-										Cras eget lacus sed mauris scelerisque tincidunt
-									</p>
-									<a href="generic.html" class="link"><span>Click Me</span></a>
-								</div>
-								<div class="video col">
-									<div class="image fit">
-										<img src="images/pic10.jpg" alt="">
-										<div class="arrow">
-											<div class="icon fa-play"></div>
-										</div>
-									</div>
-									<p class="caption">
-										Vivamus vulputate lacus non massa auctor lobortis
-									</p>
-									<a href="generic.html" class="link"><span>Click Me</span></a>
-								</div>
-								<div class="video col">
-									<div class="image fit">
-										<img src="images/pic11.jpg" alt="">
-										<div class="arrow">
-											<div class="icon fa-play"></div>
-										</div>
-									</div>
-									<p class="caption">
-										Nam eu nisi non ante sodales interdum a vitae neque
-									</p>
-									<a href="generic.html" class="link"><span>Click Me</span></a>
-								</div>
-							</div>
+							<h3>현실보다 더 현실 같은 위기 속으로. <br>
+							Track을 다운로드하고 직접 탈출해보세요.</h3>
+							<p style="font-size: 23px; font-family: Gowun Batang;">
+								⬇️ 아래 버튼을 클릭하여 지금바로 다운로드하세요! 🔽
+							</p>
+						</header>	
+						<a class="button big alt">Download							
+						</a>	
 					</div>
 				</section>
 
@@ -341,29 +191,14 @@
 								<li><a href="#">Nascetur nunc varius commodo.</a></li>
 							</ul>
 						</div>
-						<div class="col">
-							<h3>Accumsan</h3>
-							<ul class="alt">
-								<li><a href="#">Nascetur nunc varius commodo.</a></li>
-								<li><a href="#">Vis id faucibus montes tempor</a></li>
-								<li><a href="#">Massa amet lobortis vel.</a></li>
-								<li><a href="#">Nascetur nunc varius commodo.</a></li>
-							</ul>
-						</div>
 					</div>
 				</div>
 				<div class="copyright">
-					<ul class="icons">
-						<li><a href="https://www.instagram.com/_solseon/profilecard/?igsh=bTJ5YWJ3YjVuaHY4" class="icon fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
-					</ul>
-				</div>
+       				 <ul class="icons">
+           				 <li><a href="https://www.instagram.com/_solseon/profilecard/?igsh=bTJ5YWJ3YjVuaHY4" class="icon fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+       				 </ul>
+   				</div>
 			</footer>
-
-		<div class="copyright">
-			Made with: <a href="https://templated.co/">Templated.co</a>
-		</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
