Update. map add + introduce

--- a/HTML.exam/broadcast/elements.html
+++ b/HTML.exam/broadcast/elements.html
@@ -26,14 +26,6 @@
 
 <!-- Banner -->
 <section id="subeom">
-    <div class="inner">
-        <header>
-            <h1>This is Broadcast</h1>
-            <p>Morbi eu purus eget urna interdum dignissim sed consectetur augue<br>
-                vivamus vitae libero in nulla iaculis eleifend non sit amet nulla.</p>
-        </header>
-        <a href="#main" class="button big alt scrolly">Dignissim</a>
-    </div>
 
 </section>
 
@@ -45,50 +37,35 @@
             <!-- Intro -->
             <div class="row">
                 <section class="6u 12u$(medium)">
-                    <h2>What is Baseline?</h2>
-                    <p><strong>Baseline</strong> is a simple boilerplate for creating new projects with <a href="http://skel.io">Skel</a>. It features clear, concise HTML5 and CSS3 code (built on <a href="http://sass-lang.com">Sass</a>), responsiveness right out of the box, off-canvas navigation, an assortment of pre-styled elements, <a href="http://fontawesome.io">Font Awesome</a> icons, and everything offered by Skel + Skel.scss. Baseline is <a href="http://skel.io/license">MIT licensed</a>.</p>
+                    <h2>What is Team Subeom?</h2>
+                    <p><strong>Team Subeom</strong>은 독창적인 추리 게임 "Track"으로 주목받기 시작한 창의적인 게임 개발사입니다.
+                            몰입감 있는 세계관과 정교한 퍼즐 설계로 수많은 유저들의 두뇌를 사로잡았습니다.
+                            첫 작품임에도 불구하고 국내외에서 뜨거운 반응을 이끌어내며 강한 존재감을 드러냈습니다.
+                            소수 정예 팀이 모여 ‘집중력’과 ‘완성도’를 우선하는 개발 철학을 이어가고 있습니다.
+                            앞으로도 <strong>Team Subeom</strong>은 독특한 발상과 깊이 있는 게임성을 통해 또 다른 가능성을 열어갈 것입니다.</a></p>
                 </section>
                 <section class="3u 6u(medium) 12u$(small)">
-                    <h3>Sed Feugiat</h3>
-                    <p>Erat ac non lorem justo amet primis dolor adipiscing lacinia accumsan felis sed dolor interdum ut. Amet accumsan magna etiam orci faucibus interdum et lorem ipsum et nullam.</p>
+                    <h3>작은 팀, 큰 스릴.</h3>
+                    <p><strong>Team Subeom</strong>은 단순한 인원이 아닌, 밀도 있는 협업으로 움직이는 팀입니다.
+                        수십 명의 인력을 대신할 수 있는 집중력과 창의성이 우리의 무기입니다.
+                        각자의 전문성을 믿고, 하나의 목표를 향해 유연하게 나아갑니다.
+                        작지만 강한 팀, 그것이 <strong>Team Subeom</strong>의 진짜 힘입니다.</p>
                 </section>
                 <section class="3u$ 6u$(medium) 12u$(small)">
-                    <h3>Lorem Ipsum</h3>
-                    <p>Erat ac non lorem justo amet primis dolor adipiscing lacinia accumsan felis sed dolor interdum ut. Amet accumsan magna etiam orci faucibus interdum et lorem ipsum et nullam.</p>
+                    <h3>우리는 다르게 만들고, 깊게 설계한다.</h3>
+                    <p><strong>Team Subeom</strong>은 익숙함보다 실험을 선택합니다.
+                        상업성과 안정성보다 ‘하고 싶은 방향’을 믿고 밀어붙입니다.
+                        우리의 감성은 복잡하지 않지만, 늘 한 번은 새로워야 합니다.</p>
                 </section>
             </div>
 
             <hr class="major">
 
             <!-- Content -->
-            <h2 id="content">Sample Content</h2>
-            <p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
-            <div class="row">
-                <div class="6u 12u$(small)">
-                    <h3>Sem turpis amet semper</h3>
-                    <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-                </div>
-                <div class="6u$ 12u$(small)">
-                    <h3>Magna odio tempus commodo</h3>
-                    <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-                </div>
-                <!-- Break -->
-                <div class="4u 12u$(medium)">
-                    <h3>Interdum sapien gravida</h3>
-                    <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-                </div>
-                <div class="4u 12u$(medium)">
-                    <h3>Faucibus consequat lorem</h3>
-                    <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-                </div>
-                <div class="4u$ 12u$(medium)">
-                    <h3>Accumsan montes viverra</h3>
-                    <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-                </div>
-            </div>
-
+            <h2 id="content">찾아오시는 길</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25436.64918987423!2d127.01900111083982!3d37.16265780000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b46d940defb21%3A0xab45e1407bdcf21a!2z6raQ64-Z7Jqw64Ko7Y287Iqk7Yq467mM7JWE7YyM7Yq4!5e0!3m2!1sko!2skr!4v1749492637875!5m2!1sko!2skr" 
+                width="950" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <hr class="major">
-
             <!-- Elements -->
             <h2 id="elements">Elements</h2>
             <div class="row 200%">
