--- a/HTML.exam/broadcast/index.html
+++ b/HTML.exam/broadcast/index.html
@@ -14,36 +14,40 @@
 	</head>
 	<body>
 
+		<!-- Scripts -->
+		 <!-- Scripts: 웹사이트 기능을 구성하는 JavaScript 파일들 -->
+			<script src="assets/js/jquery.min.js"></script> <!-- jQuery 라이브러리 (기본 필수) -->
+			<script src="assets/js/jquery.scrolly.min.js"></script> <!-- 부드러운 스크롤 이동 효과를 위한 jQuery 플러그인 -->
+			<script src="assets/js/skel.min.js"></script> <!-- Skel 프레임워크 (반응형 레이아웃 관리, 브레이크포인트 처리 등) -->
+			<script src="assets/js/util.js"></script> <!-- 유틸리티 함수 모음 (브라우저 체크, 클래스 추가 등 보조 기능) -->
+			<script src="assets/js/main.js"></script> <!-- 웹사이트 전반적인 커스터마이징 기능을 제어하는 메인 스크립트 -->
+
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="#">Track <span>by subeom</span></a></h1>
-				<a href="#menu">Menu</a>
+				<h1><a href="./index.html">Track <span>by subeom</span></a></h1> <!-- 로고 제목: 클릭 시 메인 페이지(index.html)로 이동 -->
+				<a href="#menu">Menu</a>  <!-- 모바일/작은 화면용 메뉴 열기 링크 (Nav로 이동) -->
 			</header>
 
 		<!-- Nav -->
-			<nav id="menu">
+			<nav id="menu"> 
 				<ul class="links">
-					<li><a href="index.html">Track</a></li>
-       				<li><a href="elements.html">Team subeom</a></li>
-					<li><a href="generic.html">video</a></li>
+					<!-- 메뉴창의 경로 설정 -->
+					<li><a href="index.html">Track</a></li> <!-- 메뉴 항목 1: 게임 소개 홈 -->
+       				<li><a href="elements.html">Team subeom</a></li> <!-- 메뉴 항목 2: 개발팀 소개 페이지 -->
 				</ul>
 			</nav>
 
 			<!-- Banner -->
-			<!--
-				To use a video as your background, set data-video to the name of your video without
-				its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-				formats to work correctly.
-			-->
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
+						<!-- 배너 제목 및 소개 문구 -->
 						<header>
 							<h1>Track</h1>
 							<p style="font-size: 21px; font-family: Gowun Batang;">
 								추적자는 이미 당신을 보고 있다.<br>
 								당신의 판단이 생존을 결정한다.</p>
 						</header>
-						<a href="#main" class="button big alt scrolly">지금 시작하기</a>				
+						<a href="#main" class="button big alt scrolly">지금 시작하기</a> <!-- 부드러운 스크롤로 메인 영역으로 이동하는 버튼 -->			
 					</div>
 				</section>
 
@@ -51,70 +55,78 @@
 			<div id="main">
 
 			<!-- 관찰력, 판단력 테스트 -->
-				<section class="wrapper style1">
-					<div class="inner">
-						<header class="align-center">
+				<section class="wrapper style1"> <!-- 스타일 테마를 가진 섹션 박스 -->
+					<div class="inner"> <!-- 가운데 정렬 및 여백을 위한 내부 컨테이너 -->
+						<!-- 섹션 타이틀 및 설명 -->
+						<header class="align-center"> 
 							<h2>Test your reasoning skills.</h2>
-							<p style="font-size: 21px; font-family: Gowun Batang;">
+							<p style="font-size: 21px; font-family: Gowun Batang;"> 
 								앞으로 펼쳐질 게임에 들어가기 전,당신의 <br>
 								관찰력과 판단력이 어느 정도인지 먼저 시험해보겠습니다. <br>
 								준비되셨나요?</p>
 						</header>			
-							<div class="flex flex-2">
-								<!-- 테스트 1 -->
+						<!-- 테스트 영상 2개를 Flexbox로 배치 -->
+							<div class="flex flex-2"> 
+								<!-- 테스트 1 : 판단력 테스트 영상 -->
 								<div class="video col">
 									<div class="image fit">
-										<img src="images/pic07.jpg" alt="">
+										<img src="images/pic07.jpg">
 										<div class="arrow">
-											<div class="icon fa-play"></div>
+											<div class="icon fa-play"></div> <!-- 재생 아이콘 -->
 										</div>
 									</div>
 									<p class="caption">
 										Combine all the clues. The judgment you're making now, could change the course of this game.
 									</p>
-									<a href="https://www.youtube.com/watch?v=LuIPmk0Opc0" target="_blank" rel="noopener noreferrer" class="link"><span>Click Me</span></a><!--새로운 탭에서 링크를 열 수 있도록 target속성을 blank로 지정해준다. 또한 보안을 위하여 rel="noopener noreferrer" 를 추가해준다.-->
+									<!-- 링크 새창 열기 + 보안 처리 (noopener noreferrer) -->
+									<a href="https://www.youtube.com/watch?v=LuIPmk0Opc0" target="_blank" rel="noopener noreferrer" class="link"><span>Click Me</span></a>
 								</div>
-								<!-- 테스트 2 -->
+								<!-- 테스트 2 : 관찰력 테스트 영상 -->
 								<div class="video col">
 									<div class="image fit">
-										<img src="images/pic08.jpg" alt="">
+										<img src="images/pic08.jpg">
 										<div class="arrow">
-											<div class="icon fa-play"></div>
+											<div class="icon fa-play"></div> <!-- 재생 아이콘 -->
 										</div>
 									</div>
 									<p class="caption">
 										How accurate are your eyes? I'm going to test my observation from now on.
 									</p>
-									<a href="https://www.youtube.com/watch?v=-GzKyytgI60" target="_blank" rel="noopener noreferrer" class="link"><span>Click Me</span></a><!--새로운 탭에서 링크를 열 수 있도록 target속성을 blank로 지정해준다. 또한 보안을 위하여 rel="noopener noreferrer" 를 추가해준다.-->
+									<!-- 링크 새창 열기 + 보안 처리 (noopener noreferrer) -->
+									<a href="https://www.youtube.com/watch?v=-GzKyytgI60" target="_blank" rel="noopener noreferrer" class="link"><span>Click Me</span></a>
 								</div>
 							</div>
 					</div>
 				</section>
-<!--탈출의 단서를 향해 한 걸음씩 나아가십시오.
-지금 ‘Track’에서 진정한 서스펜스를 경험해보세요.-->
-			<!-- 트레일러와 게임플레이영상 소개 -->
+
+			<!-- 트레일러와 게임 플레이 영상 소개 섹션 -->
 				<section class="wrapper style2">
 					<div class="inner">
+
+						<!-- 섹션 제목 및 설명 -->
 						<header>
 							<h3>단서, 판단, 탈출. 지금 ‘Track’의 모든 과정을 직접 눈으로 확인하세요.</h3>
-							<p>Fusce fringilla enim sit amet lectus sollicitudin, eu tincidunt odio semper.</p>
+							<p>Watch the official trailer of  <strong> Trank</strong>. Can you escape?</p>
 						</header>
-						<!-- Tabbed Video Section -->
+
+						<!-- 탭형 비디오 플레이어 영역 -->
 							<div class="flex flex-tabs">
+								<!-- 탭 선택 메뉴 -->
 								<ul class="tab-list">
+									<!-- 탭 1: 트레일러 (기본 선택) -->
 									<li><a data-tab="tab-1" class="active">Trailer</a></li>
+									<!-- 탭 2: 플레이 영상 -->
 									<li><a data-tab="tab-2">Play video</a></li>
 								</ul>
+								<!-- 탭별 콘텐츠 표시 영역 -->
 								<div class="tabs">
 									<!-- Tab 1: 트레일러-->
-										<div class="tab tab-1 flex flex-3 active">
-											<!-- 트레일러 1 -->
-												<div class="video col">
-													 <!-- <div class="image fit">									 -->
-														<div class="arrow">
-														 <!-- <div class="icon fa-play"></div>  -->
-														</div>
+										<div class="tab tab-1 flex flex-3 active">		
+											<!-- 트레일러 1 -->								
+												<div class="video col">													 
+													<div class="arrow">	<!-- 재생 아이콘 등 커버 UI 영역 -->											
 													</div>
+												</div>
 													<iframe width="700" height="400" src="https://www.youtube.com/embed/MlKR0zz8l1Q?si=XPwEIACC2QeMLflJ" 
 													title="YouTube video player" frameborder="0"
 													allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -122,10 +134,8 @@
 												<br>
 												<br>
 											<!-- 트레일러 2 -->
-												<div class="video col">
-													<!-- <div class="image fit"> -->
-														<div class="arrow">
-															<!-- <div class="icon fa-play"></div> -->
+												<div class="video col">													
+														<div class="arrow">															
 														</div>
 													</div>
 													<iframe width="700" height="400" src="https://www.youtube.com/embed/Gg0o2ueU53w?si=_mX-H4gEC5PtaFeq" 
@@ -136,7 +146,7 @@
 									<!-- Tab 2: 플레이영상 -->
 										<div class="tab tab-2 flex flex-3">											
 												<div class="video col">
-														<div class="arrow">														
+														<div class="arrow">	<!-- 재생 아이콘 등 커버 UI 영역 -->													
 														</div>
 												</div>
 													<iframe width="700" height="400" src="https://www.youtube.com/embed/PnnNVQGVdts?si=M0XqVm7cYGg0UrQ6&amp;start=20" 
@@ -152,59 +162,33 @@
 				</section>
 
 			<!-- 게임 다운로드 -->
-			 <!-- <section id="banner" data-video="images/banner"></section> -->
-				<section class="wrapper">
-					<div class="inner">
-						<header class="align-center">
+				<section class="wrapper"> <!-- 외부 레이아웃을 감싸는 컨테이너 -->
+					<div class="inner"> <!-- 내부 콘텐츠를 중앙에 정렬시키는 구조 -->
+						<header class="align-center"> <!-- 가운데 정렬된 헤더 영역 -->
+							<!-- 다운로드 유도 문구 (강렬한 분위기 강조) -->
 							<h3>현실보다 더 현실 같은 위기 속으로. <br>
 							Track을 다운로드하고 직접 탈출해보세요.</h3>
 							<p style="font-size: 23px; font-family: Gowun Batang;">
 								⬇️ 아래 버튼을 클릭하여 지금바로 다운로드하세요! 🔽
 							</p>
+							<!-- 다운로드 버튼 -->
+							<a class="button big alt" href="./TrackGame.zip" download>Download											
+							</a>	
 						</header>	
-						<a class="button big alt">Download							
-						</a>	
 					</div>
 				</section>
 
-			</div>
-
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="inner">
-					<div class="flex flex-3">
-						<div class="col">
-							<h3>Vestibullum</h3>
-							<ul class="alt">
-								<li><a href="#">Nascetur nunc varius commodo.</a></li>
-								<li><a href="#">Vis id faucibus montes tempor</a></li>
-								<li><a href="#">Massa amet lobortis vel.</a></li>
-								<li><a href="#">Nascetur nunc varius commodo.</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Lobortis</h3>
-							<ul class="alt">
-								<li><a href="#">Nascetur nunc varius commodo.</a></li>
-								<li><a href="#">Vis id faucibus montes tempor</a></li>
-								<li><a href="#">Massa amet lobortis vel.</a></li>
-								<li><a href="#">Nascetur nunc varius commodo.</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
+				<div class="copyright"> <!-- 개발사 관련 정보와 소셜 아이콘을 포함하는 영역 -->
        				 <ul class="icons">
-           				 <li><a href="https://www.instagram.com/_solseon/profilecard/?igsh=bTJ5YWJ3YjVuaHY4" class="icon fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+						<h4>About subeom</h4>
+						<!-- Instagram 링크 아이콘 (새 창 열기 + 보안 처리) -->
+           				<li><a href="https://www.instagram.com/_solseon/profilecard/?igsh=bTJ5YWJ3YjVuaHY4" class="icon fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+						<!-- GitHub 링크 아이콘 (레포지토리 목록으로 이동 + 보안 처리) -->
+						<li><a href="https://github.com/solseon?tab=repositories" class="icon fa-github" target="_blank" rel="noopener noreferrer"><span class="label">Github</span></a></li>
        				 </ul>
    				</div>
-			</footer>
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+			</footer>		
 	</body>
 </html>
