Update.주석 최신 업데이트

--- a/HTML.exam/broadcast/elements.html
+++ b/HTML.exam/broadcast/elements.html
@@ -1,10 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML> <!-- 문서가 HTML5 형식임을 선언 -->
 <html>
 <head>
-    <title>Subeom</title>
-    <meta charset="utf-8">
+    <title>Subeom</title> <!-- 브라우저 탭에 표시될 문서 제목 설정 -->
+    <meta charset="utf-8"> <!-- 문자 인코딩을 UTF-8로 설정 (한글 포함 다양한 문자 지원) -->
+    <!-- 검색 엔진 로봇이 이 페이지를 인덱싱하고 링크를 따라가도록 허용 -->
+    <!-- 이미지, 스니펫, 동영상 미리보기 크기 제한도 설정 -->
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <!-- 반응형 웹을 위한 뷰포트 설정: 화면 너비에 맞춰 콘텐츠 크기 조정 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 외부 CSS 파일(main.css)을 연결하여 스타일 적용 -->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
