--- a/HTML.exam/broadcast/index.html
+++ b/HTML.exam/broadcast/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Track</title>
-		<meta charset="utf-8">
+		<title>Track</title> <!-- 웹 브라우저 탭에 표시될 제목 -->
+		<meta charset="utf-8"> <!-- 문자 인코딩을 UTF-8로 설정 -->
+		<!-- 검색 엔진 로봇이 이 페이지를 인덱싱하고 링크를 따라가도록 허용 -->
+    	<!-- 이미지, 스니펫, 동영상 미리보기 크기 제한도 설정 -->
 		<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+		<!-- 반응형 웹을 위한 뷰포트 설정: 화면 너비에 맞춰 콘텐츠 크기 조정 -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		 <!--반응형 웹을 위한 설정입니다.
-		다양한 기기(특히 모바일)에서도 화면이 잘 보이도록, 뷰포트 크기를 디바이스 너비에 맞추고 기본 확대 비율을 1로 설정합니다.-->
 		<link rel="stylesheet" href="assets/css/main.css"> <!--외부 CSS 파일을 불러온다. assets/css/main.css 경로에 있는 스타일시트가 웹페이지에 적용된다.-->
-		<link rel="preconnect" href="https://fonts.googleapis.com">	<!--한글 폰트 CSS링크-->
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">	<!-- 구글 폰트 로딩을 위한 사전 연결 -->
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<!-- 'Gowun Batang' 폰트를 구글 폰트에서 불러옴 -->
+		<link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap" rel="stylesheet">
 	</head>
 	<body>
 
